--- a/classes/Search.html
+++ b/classes/Search.html
@@ -210,7 +210,7 @@
 
 
   <div class="class-description">
-  <p>A class to access the Mappedin Smart Search API. This will be created for you as part of Mappedin.Mappedin/initailize:method, but you can also create one manually.</p>
+  <p>A class to access the Mappedin Search API. This will be created for you as part of Mappedin.Mappedin/initailize:method, but you can also create one manually.</p>
 
   </div>
 
