Updating docs for 1.46.0

--- a/classes/MappedinDirections.html
+++ b/classes/MappedinDirections.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.21.1
+                                  Version: 1.46.0
                                 </a>
                             </h4>
                         </div>
@@ -144,6 +144,9 @@
                                         <a href="../classes/MappedinLocation.html">MappedinLocation</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MappedinMap.html">MappedinMap</a>
                                     </li>
                                     <li>
@@ -177,6 +180,9 @@
                                         <a href="../classes/Search.html">Search</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
@@ -195,6 +201,8 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> MappedinDirections Class
+              <i class="fa fa-pencil" aria-hidden="true"></i>
+            </a>
     </h1>
 </div>
 
@@ -205,6 +213,9 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
+        <div class="foundat">
+            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L905">source/Mappedin.getVenue.js:905</a>
+        </div>
 </div>
 
 
@@ -248,16 +259,16 @@
 
                       <ul class="index-list properties">
                               <li class="index-item property">
-                                  <a href="#property_directions">directions</a>
-
-                              </li>
-                              <li class="index-item property">
                                   <a href="#property_directionsProvider">directionsProvider</a>
 
                                       <span class="flag static">static</span>
                               </li>
                               <li class="index-item property">
                                   <a href="#property_distance">distance</a>
+
+                              </li>
+                              <li class="index-item property">
+                                  <a href="#property_instructions">instructions</a>
 
                               </li>
                               <li class="index-item property">
@@ -273,32 +284,6 @@
 
               <div id="tab_properties" role="tabpanel" class="tab-pane">
                   <div class="item-list">
-  <div id="property_directions" class="property item">
-      <h3 class="name anchorable-toc">
-          <a class="fa fa-link toc-anchor" href="#property_directions"></a>
-          directions
-      </h3>
-      <span class="type"><a href="../classes/MappedinDirective.html" class="crosslink">[MappedinDirective]</a></span>
-  
-  
-  
-  
-  
-      <div class="meta">
-                  <p>
-          </p>
-  
-  
-      </div>
-  
-      <div class="description">
-          <p>Directions to display to the user.</p>
-  
-      </div>
-  
-  
-  
-  </div>
   <div id="property_directionsProvider" class="property item">
       <h3 class="name anchorable-toc">
           <a class="fa fa-link toc-anchor" href="#property_directionsProvider"></a>
@@ -314,6 +299,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1126">source/Mappedin.getVenue.js:1126</a>
           </p>
   
   
@@ -340,6 +327,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1110">source/Mappedin.getVenue.js:1110</a>
           </p>
   
   
@@ -347,6 +336,34 @@
   
       <div class="description">
           <p>Total distance of path in meters</p>
+  
+      </div>
+  
+  
+  
+  </div>
+  <div id="property_instructions" class="property item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#property_instructions"></a>
+          instructions
+      </h3>
+      <span class="type"><a href="../classes/MappedinDirective.html" class="crosslink">[MappedinDirective]</a></span>
+  
+  
+  
+  
+  
+      <div class="meta">
+                  <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1115">source/Mappedin.getVenue.js:1115</a>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>Instructions to display to the user.</p>
   
       </div>
   
@@ -366,6 +383,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1120">source/Mappedin.getVenue.js:1120</a>
           </p>
   
   
