--- a/classes/CameraControls.html
+++ b/classes/CameraControls.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.21.1
+                                  Version: 1.46.0
                                 </a>
                             </h4>
                         </div>
@@ -144,6 +144,9 @@
                                         <a href="../classes/MappedinLocation.html">MappedinLocation</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MappedinMap.html">MappedinMap</a>
                                     </li>
                                     <li>
@@ -177,6 +180,9 @@
                                         <a href="../classes/Search.html">Search</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
@@ -195,6 +201,8 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> CameraControls Class
+              <i class="fa fa-pencil" aria-hidden="true"></i>
+            </a>
     </h1>
 </div>
 
@@ -205,6 +213,9 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
+        <div class="foundat">
+            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L20">source/Mappedin.CameraControls.js:20</a>
+        </div>
 </div>
 
 
@@ -462,6 +473,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L629">source/Mappedin.CameraControls.js:629</a>
   		</p>
   
   
@@ -596,6 +609,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L1381">source/Mappedin.CameraControls.js:1381</a>
   		</p>
   
   
@@ -635,6 +650,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L516">source/Mappedin.CameraControls.js:516</a>
   		</p>
   
   
@@ -692,6 +709,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L552">source/Mappedin.CameraControls.js:552</a>
   		</p>
   
   
@@ -734,6 +753,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L562">source/Mappedin.CameraControls.js:562</a>
   		</p>
   
   
@@ -776,6 +797,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L572">source/Mappedin.CameraControls.js:572</a>
   		</p>
   
   
@@ -818,6 +841,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L582">source/Mappedin.CameraControls.js:582</a>
   		</p>
   
   
@@ -860,6 +885,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L612">source/Mappedin.CameraControls.js:612</a>
   		</p>
   
   
@@ -902,6 +929,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L602">source/Mappedin.CameraControls.js:602</a>
   		</p>
   
   
@@ -944,6 +973,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L592">source/Mappedin.CameraControls.js:592</a>
   		</p>
   
   
@@ -992,6 +1023,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L300">source/Mappedin.CameraControls.js:300</a>
   		</p>
   
   
@@ -1047,6 +1080,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L818">source/Mappedin.CameraControls.js:818</a>
   		</p>
   
   
@@ -1086,6 +1121,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L533">source/Mappedin.CameraControls.js:533</a>
   		</p>
   
   
@@ -1146,6 +1183,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L371">source/Mappedin.CameraControls.js:371</a>
   		</p>
   
   
@@ -1206,6 +1245,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L720">source/Mappedin.CameraControls.js:720</a>
   		</p>
   
   
@@ -1291,6 +1332,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L313">source/Mappedin.CameraControls.js:313</a>
   		</p>
   
   
@@ -1351,6 +1394,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L350">source/Mappedin.CameraControls.js:350</a>
   		</p>
   
   
@@ -1402,6 +1447,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L392">source/Mappedin.CameraControls.js:392</a>
   		</p>
   
   
@@ -1453,6 +1500,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L432">source/Mappedin.CameraControls.js:432</a>
   		</p>
   
   
@@ -1505,6 +1554,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L412">source/Mappedin.CameraControls.js:412</a>
   		</p>
   
   
@@ -1551,6 +1602,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L1363">source/Mappedin.CameraControls.js:1363</a>
   		</p>
   
   
@@ -1587,6 +1640,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L461">source/Mappedin.CameraControls.js:461</a>
   		</p>
   
   
@@ -1644,6 +1699,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L484">source/Mappedin.CameraControls.js:484</a>
   		</p>
   
   
@@ -1713,6 +1770,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L500">source/Mappedin.CameraControls.js:500</a>
   		</p>
   
   
@@ -1771,6 +1830,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L247">source/Mappedin.CameraControls.js:247</a>
           </p>
   
   
@@ -1891,6 +1952,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L60">source/Mappedin.CameraControls.js:60</a>
           </p>
   
   
@@ -1918,6 +1981,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L76">source/Mappedin.CameraControls.js:76</a>
           </p>
   
   
@@ -1945,6 +2010,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L84">source/Mappedin.CameraControls.js:84</a>
           </p>
   
   
@@ -1972,6 +2039,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L68">source/Mappedin.CameraControls.js:68</a>
           </p>
   
   
@@ -1999,6 +2068,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L116">source/Mappedin.CameraControls.js:116</a>
           </p>
   
   
@@ -2026,6 +2097,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L108">source/Mappedin.CameraControls.js:108</a>
           </p>
   
   
@@ -2053,6 +2126,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L187">source/Mappedin.CameraControls.js:187</a>
           </p>
   
   
@@ -2080,6 +2155,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L100">source/Mappedin.CameraControls.js:100</a>
           </p>
   
   
@@ -2107,6 +2184,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L179">source/Mappedin.CameraControls.js:179</a>
           </p>
   
   
@@ -2134,6 +2213,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L92">source/Mappedin.CameraControls.js:92</a>
           </p>
   
   
@@ -2161,6 +2242,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L195">source/Mappedin.CameraControls.js:195</a>
           </p>
   
   
@@ -2221,6 +2304,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L151">source/Mappedin.CameraControls.js:151</a>
           </p>
   
   
@@ -2284,6 +2369,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L52">source/Mappedin.CameraControls.js:52</a>
           </p>
   
   
@@ -2311,6 +2398,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L143">source/Mappedin.CameraControls.js:143</a>
           </p>
   
   
@@ -2338,6 +2427,8 @@ The camera will always be pointed directly at the anchor point. <a href="../clas
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.CameraControls.js#L44">source/Mappedin.CameraControls.js:44</a>
           </p>
   
   
