--- a/classes/MappedinNode.html
+++ b/classes/MappedinNode.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.21.1
+                                  Version: 1.46.0
                                 </a>
                             </h4>
                         </div>
@@ -144,6 +144,9 @@
                                         <a href="../classes/MappedinLocation.html">MappedinLocation</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MappedinMap.html">MappedinMap</a>
                                     </li>
                                     <li>
@@ -177,6 +180,9 @@
                                         <a href="../classes/Search.html">Search</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
@@ -195,6 +201,8 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> MappedinNode Class
+              <i class="fa fa-pencil" aria-hidden="true"></i>
+            </a>
     </h1>
 </div>
 
@@ -205,6 +213,9 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
+        <div class="foundat">
+            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L552">source/Mappedin.getVenue.js:552</a>
+        </div>
 </div>
 
 
@@ -333,6 +344,8 @@
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L710">source/Mappedin.getVenue.js:710</a>
   		</p>
   
   
@@ -425,6 +438,8 @@
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L898">source/Mappedin.getVenue.js:898</a>
   		</p>
   
   
@@ -488,6 +503,8 @@
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L664">source/Mappedin.getVenue.js:664</a>
   		</p>
   
   
@@ -546,6 +563,8 @@
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L678">source/Mappedin.getVenue.js:678</a>
   		</p>
   
   
@@ -591,6 +610,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L567">source/Mappedin.getVenue.js:567</a>
           </p>
   
   
@@ -619,6 +640,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L638">source/Mappedin.getVenue.js:638</a>
           </p>
   
   
@@ -645,6 +668,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L576">source/Mappedin.getVenue.js:576</a>
           </p>
   
   
@@ -671,6 +696,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L616">source/Mappedin.getVenue.js:616</a>
           </p>
   
   
@@ -697,6 +724,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L582">source/Mappedin.getVenue.js:582</a>
           </p>
   
   
@@ -723,6 +752,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L587">source/Mappedin.getVenue.js:587</a>
           </p>
   
   
