--- a/classes/MappedinPolygon.html
+++ b/classes/MappedinPolygon.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.21.1
+                                  Version: 1.46.0
                                 </a>
                             </h4>
                         </div>
@@ -144,6 +144,9 @@
                                         <a href="../classes/MappedinLocation.html">MappedinLocation</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MappedinMap.html">MappedinMap</a>
                                     </li>
                                     <li>
@@ -177,6 +180,9 @@
                                         <a href="../classes/Search.html">Search</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
@@ -195,6 +201,8 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> MappedinPolygon Class
+              <i class="fa fa-pencil" aria-hidden="true"></i>
+            </a>
     </h1>
 </div>
 
@@ -205,6 +213,9 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
+        <div class="foundat">
+            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1193">source/Mappedin.getVenue.js:1193</a>
+        </div>
 </div>
 
 
@@ -313,6 +324,8 @@
   
   	<div class="meta">
   				<p>
+  				Defined in
+  		<a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1290">source/Mappedin.getVenue.js:1290</a>
   		</p>
   
   
@@ -396,6 +409,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1269">source/Mappedin.getVenue.js:1269</a>
           </p>
   
   
@@ -422,6 +437,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1207">source/Mappedin.getVenue.js:1207</a>
           </p>
   
   
@@ -450,6 +467,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1244">source/Mappedin.getVenue.js:1244</a>
           </p>
   
   
@@ -476,6 +495,8 @@
   
       <div class="meta">
                   <p>
+                  Defined in
+          <a href="https://github.com/MappedIn/platform-api/blob/0/source/Mappedin.getVenue.js#L1216">source/Mappedin.getVenue.js:1216</a>
           </p>
   
   
