--- a/modules/Mappedin.html
+++ b/modules/Mappedin.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.21.1
+                                  Version: 1.46.0
                                 </a>
                             </h4>
                         </div>
@@ -144,6 +144,9 @@
                                         <a href="../classes/MappedinLocation.html">MappedinLocation</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/MappedinMap.html">MappedinMap</a>
                                     </li>
                                     <li>
@@ -177,6 +180,9 @@
                                         <a href="../classes/Search.html">Search</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
@@ -195,12 +201,17 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> Mappedin Module
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+              </a>
     </h1>
 </div>
 
 <div class="content-meta">
 
 
+        <div class="foundat">
+            Defined in: <a href="https://github.com/MappedIn/platform-api/blob/0/Mappedin-web.es.js#L36">Mappedin-web.es.js:36</a>
+        </div>
 
 </div>
 
@@ -263,6 +274,11 @@
                             </a>
                         </li>
                         <li class="module-class">
+                            <a href="../classes/MappedinLocationState.html">
+                                MappedinLocationState
+                            </a>
+                        </li>
+                        <li class="module-class">
                             <a href="../classes/MappedinMap.html">
                                 MappedinMap
                             </a>
@@ -315,6 +331,11 @@
                         <li class="module-class">
                             <a href="../classes/Search.html">
                                 Search
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/SmartLabel.html">
+                                SmartLabel
                             </a>
                         </li>
                         <li class="module-class">
