Updating docs for 1.46.1

--- a/classes/MapView2D.html
+++ b/classes/MapView2D.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.21.1
+                                  Version: 1.46.1
                                 </a>
                             </h4>
                         </div>
@@ -142,6 +142,9 @@
                                     </li>
                                     <li>
                                         <a href="../classes/MappedinLocation.html">MappedinLocation</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
                                     </li>
                                     <li>
                                         <a href="../classes/MappedinMap.html">MappedinMap</a>
@@ -392,8 +395,12 @@
                                   <a href="#method_createMarker">createMarker</a>
 
                               </li>
-                              <li class="index-item method inherited inherited">
+                              <li class="index-item method inherited">
                                   <a href="#method_drawPath">drawPath</a>
+
+                              </li>
+                              <li class="index-item method inherited">
+                                  <a href="#method_drawPathSegment">drawPathSegment</a>
 
                               </li>
                               <li class="index-item method inherited">
@@ -1161,10 +1168,8 @@
   
   
   	<div class="meta">
-  			<p>Inherited from
-  			<a href="../classes/MapView.html#method_drawPath">
-  				MapView
-  			</a>
+  				<p>Inherited from
+  				<a href="../classes/MapView.html#method_drawPath">MapView</a>:
   		</p>
   
   
@@ -1172,7 +1177,7 @@
   	</div>
   
   	<div class="description"><p>Draws an entire path. It takes a list of Nodes and will break them into separate pathSegments on every map change, putting the resultant segment on the right Map.</p>
-  <p>If you have a special use case (like off graph nodes, or Venues with same Vortexes) use the MapView/drawPathSegment:method function.</p>
+  <p>If you have a special use case (like off graph nodes, or Venues with same Vortexes) use the <a href="../classes/MapView.html#method_drawPathSegment" class="crosslink">drawPathSegment</a> function.</p>
   <p>Returns an array of pathSegments if you want to customize the animation triggers. The pathSegements are added to the scene, chained together, and start animating automatically.</p>
   </div>
   
@@ -1208,6 +1213,132 @@
   			<div class="returns-description">
   						<span class="type">PathSegment</span>:
   					<p>An array of pathSegments.</p>
+  
+  			</div>
+  		</div>
+  
+  </div>
+  <div id="method_drawPathSegment" class="method item inherited">
+  	<span class="method-signature">
+  	<span class="name anchorable-toc">
+  		<a class="fa fa-link toc-anchor" href="#method_drawPathSegment"></a>
+  		drawPathSegment
+  	</span>
+  
+  		<div class="args">
+  			<span class="paren">(</span><ul class="args-list inline commas">
+  				<li class="arg">
+  						<code>path</code>
+  				</li>
+  				<li class="arg">
+  						<code class="optional">options</code>
+  				</li>
+  			</ul><span class="paren">)</span>
+  		</div>
+  		<span class="returns-inline">
+  			<span class="type">PathSegment</span>
+  		</span>
+  	</span>
+  
+  
+  
+  
+  
+  
+  
+  	<div class="meta">
+  				<p>Inherited from
+  				<a href="../classes/MapView.html#method_drawPathSegment">MapView</a>:
+  		</p>
+  
+  
+  
+  	</div>
+  
+  	<div class="description"><p>Takes a list of {x, y} pairs in Mappedin coordinate space and draws a connected path on the specified Map. Use this function for special cases not handled by the drawPath convenience function.
+  Returns a pathSegment. You will need to call it's <a href="../classes/Tween.html" class="crosslink">Tween</a>.start() function to begin animation and make the path segment visible.
+  You can customize the Tween.js tween if you like, but make sure tryRendering is always called in onUpdate or the path may stop.</p>
+  </div>
+  
+  		<div class="params">
+  			<h4>Parameters:</h4>
+  
+  			<ul class="params-list">
+  				<li class="param">
+  						<code class="param-name">path</code>
+  						<span class="type"><a href="../classes/MappedinNode.html" class="crosslink">[MappedinNode]</a></span>
+  
+  
+  					<div class="param-description"><p>An array of Nodes, probably from a Node's <a href="../classes/MappedinNode.html#method_directionsTo" class="crosslink">directionsTo</a> call.</p>
+  </div>
+  
+  				</li>
+  				<li class="param">
+  						<code class="param-name optional">[options]</code>
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  						<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  
+  					<div class="param-description"><p>A list of style options for the path. Not everything is supported in 2D.</p>
+  </div>
+  
+  						<ul class="params-list">
+  							<li class="param">
+  									<code class="param-name optional">[color=this.colors.path]</code>
+  									<span class="type">Integer</span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Color of path. Uses colors.path if not specified.</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[pulseColor=this.colors.pathPulse]</code>
+  									<span class="type">Integer</span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Color of path pulse. Uses colors.pathPulse if not specified. Ignored in 2D.</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[radius=10]</code>
+  									<span class="type">Integer</span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>The radius of the path.</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[drawDuration=3000]</code>
+  									<span class="type">Integer</span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Duration the path fade in animation for this segment, in milliseconds.</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[curve=Mappedin.Easing.Circular.InOut]</code>
+  									<span class="type"><a href="../classes/Easing.html" class="crosslink">Easing</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>The animation curve to use for the path fade in animation.</p>
+  </div>
+  
+  							</li>
+  						</ul>
+  				</li>
+  			</ul>
+  		</div>
+  
+  		<div class="returns">
+  			<h4>Returns:</h4>
+  
+  			<div class="returns-description">
+  						<span class="type">PathSegment</span>:
+  					<p>A path segment object, with a tween property you should start(), and a reset() function to set it back to it's default state.</p>
   
   			</div>
   		</div>
@@ -2317,7 +2448,7 @@
   	</div>
   
   	<div class="description"><p>Labels a specific Polygon (or area of 3D space) with a <a href="../classes/TextLabel.html" class="crosslink">TextLabel</a> that lives in 3D space. That means it will be smaller when the camera is further away, and the angle you see it at will change with the camera.
-  The text will flip 180 degress when the camera rotates so it's never totally upside-down.</p>
+  The text will flip 180 degrees when the camera rotates so it's never totally upside-down.</p>
   <p>It also sets the hover label (in 2D and 3D).
   Many of these options do nothing in 2D, as TextLabels are not supported, but it won't break anything.</p>
   <p>You must provide text, and either a Polygon, or a canvasBounds and height</p>
@@ -2397,7 +2528,7 @@
   												<code class="param-name">align</code>
   												<span class="type">"left"  |  "right"  |  "center"</span>
   
-  											<div class="param-description">Whether the TextLabel should be anchored against the (x,y), or the opposite (horizinal) side of the box, or in the middle. It is always vertically centered.</div>
+  											<div class="param-description">Whether the TextLabel should be anchored against the (x,y), or the opposite (horizontal) side of the box, or in the middle. It is always vertically centered.</div>
   										</li>
   									</ul>
   							</li>
@@ -2448,10 +2579,10 @@
   							</li>
   							<li class="param">
   									<code class="param-name optional">[font]</code>
-  									<span class="type">#crossLink "MapView/createFont:method"</span>
+  									<span class="type"></span>
   									<span class="flag optional" title="This parameter is optional.">optional</span>
   
-  								<div class="param-description"><p>A THREE.Font object, if you have your own font you want to use. Create it with }{{/crossLink}}.</p>
+  								<div class="param-description"><p>A CSS style string font. ie "sans-serif". Note: Support for a THREE.Font object is still supported, but is deprecated.</p>
   </div>
   
   							</li>
@@ -2460,7 +2591,7 @@
   									<span class="type">Float</span>
   									<span class="flag optional" title="This parameter is optional.">optional</span>
   
-  								<div class="param-description"><p>The minimum percentange we can shrink the label to if it won't fit within the bounds at 100%. If it doesn't fit at that level, it won't be created.</p>
+  								<div class="param-description"><p>The minimum percentage we can shrink the label to if it won't fit within the bounds at 100%. If it doesn't fit at that level, it won't be created.</p>
   </div>
   
   							</li>
@@ -2896,7 +3027,7 @@
   						<span class="type">PathSegment</span>
   
   
-  					<div class="param-description"><p>A segment returned from MapView/drawPathSegment:method or <a href="../classes/MapView.html#method_drawPath" class="crosslink">drawPath</a></p>
+  					<div class="param-description"><p>A segment returned from <a href="../classes/MapView.html#method_drawPathSegment" class="crosslink">drawPathSegment</a> or <a href="../classes/MapView.html#method_drawPath" class="crosslink">drawPath</a></p>
   </div>
   
   				</li>
