--- a/classes/TextLabel.html
+++ b/classes/TextLabel.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.21.1
+                                  Version: 1.46.1
                                 </a>
                             </h4>
                         </div>
@@ -142,6 +142,9 @@
                                     </li>
                                     <li>
                                         <a href="../classes/MappedinLocation.html">MappedinLocation</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
                                     </li>
                                     <li>
                                         <a href="../classes/MappedinMap.html">MappedinMap</a>
@@ -210,7 +213,7 @@
 
 
   <div class="class-description">
-  <p>An internal representaion of a 3D text label. Make your own with <a href="../classes/MapView.html#method_labelPolygon" class="crosslink">labelPolygon</a>.</p>
+  <p>An internal representation of a 3D text label. Make your own with <a href="../classes/MapView.html#method_labelPolygon" class="crosslink">labelPolygon</a>.</p>
 
   </div>
 
